Prevent margin collapse with overflow hidden rather than a border to make Opera happy.

--- a/public_html/bse-admin/css/admin.css
+++ b/public_html/bse-admin/css/admin.css
@@ -384,7 +384,7 @@ div.modal h2 {
 
 div.sheet {
     background-color: rgba(255,255,255,0.9);
-    border-top: 0.083em solid #fff; /* prevent margin collapse */
+    overflow:  hidden; /* prevent margin collapse */
     border-bottom: 0;
     -webkit-border-top-left-radius: 0;
     -webkit-border-top-right-radius: 0;
